--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Build image and push to GitHub Packages
         run: |
           echo "${{ vars.ENV_FILE }}" > .env
-          docker compose --env-file=.env -f docker/dev/docker-compose.yml build
+          docker compose --env-file=.env -f docker-compose.yml build
           docker push ghcr.io/sergiuchilat/next-build-test:dev
