--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env
     profiles:
       - build
   run:
     image: ghcr.io/sergiuchilat/next-build-test/front:dev
     profiles:
       - run
+    ports:
+      - "3000:3000"
 
