--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Check out
         uses: actions/checkout@v4
 
+      - name: Set up env file
+        run: echo "${{ vars.ENV_FILE }}" > .env
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -21,8 +24,8 @@ jobs:
           username: $${{ secrets.GHCR_USER }}
           password: ${{ secrets.GHCR_TOKEN }}
       - name: Build image and push to GitHub Packages
+
         run: |
-          echo "${{ vars.ENV_FILE }}" > .env
           cat .env
           docker compose --env-file=.env -f docker-compose.yml --profile=build build
           docker push ghcr.io/sergiuchilat/next-build-test/front:dev
