--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,7 +15,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up env file
-        run: echo "${{ vars.ENV_FILE }}" > .env
+        run: |
+          echo "${{ vars.ENV_FILE }}" > .env
+          echo "SOME SECRET" >> secret.txt
+        
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
