--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -18,8 +18,8 @@ jobs:
     steps:
       - name: Parse env file
         id: parse-env
-        run: | 
-          echo "${{ ENV_FILE }}" > .env
+        run: |
+          echo $ENV_FILE" > .env
           cat .env
 
   build:
