--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Parse env file
         id: parse-env
         run: |
-          echo "$ENV_FILE" > .env
+          echo "$ENV_FILE"
+          echo "1" > .env
           cat .env
 
   build:
