--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,7 +25,6 @@ jobs:
           TEST_PUBLIC_VALUE: ${{ vars.TEST_PUBLIC_VALUE }}
           TEST_SECRET_VALUE: ${{ secrets.TEST_SECRET_VALUE }}
         run: |
-          echo "TEST_PUBLIC_VALUE=${TEST_PUBLIC_VALUE}"
-          echo "TEST_SECRET_VALUE=${TEST_SECRET_VALUE}"
-          docker compose -f docker-compose.yml --profile=build build
-          docker push ghcr.io/sergiuchilat/next-build-test/front:dev
+          echo "ENV_FILE_CONTENT=${{ vars.ENV_FILE }}"
+#          docker compose -f docker-compose.yml --profile=build build
+#          docker push ghcr.io/sergiuchilat/next-build-test/front:dev
